syntax = "proto3";

option go_package ="github.com/elasticspoon/gruby-chat-s/rpc";

package rpc;

service Chat {
  rpc SaveMessage (ChatMessage) returns (MessageResponse) {}
  rpc SendMessage (ChatMessage) returns (MessageResponse) {}
  rpc GetLocation (LocationRequest) returns (stream LocationResponse) {}
}

// The request message containing the user's name.
message ChatMessage {
  int32 id = 1;
  int32 user_id = 2;
  int32 chat_room_id = 3;
  string chat_message = 4;
  string created_at = 5;
  string updated_at = 6;
}

message MessageResponse {}

message LocationRequest {
  int32 user_id = 1;
}

message LocationResponse {
  int32 timestamp = 1;
  int32 distance = 2;
}
